# CrossSave-Cloud

./: .gitignore  AGENTS.md  EVENTS.md  README.md  ROADMAP.md  coding_rules.txt  roadmap.txt
.github/workflows/: docker-selfhost.yml
app/: .tauriignore  command_check_4_1.md  package.json  pnpm-lock.yaml  vite.config.js
app/scripts/: Dockerfile.linux  README.md  build-android.sh  build-docker-image.sh  build-ios.sh  build-linux-docker.sh  build-linux.sh  build-macos.sh  build-muos.sh  build-windows.sh  debug-android.sh
app/src/: App.svelte  app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: mobile.json
app/src-tauri/data/profiles/: retroarch.json
app/src-tauri/resources/profiles/: aethersx2.json  dolphin.json  drastic.json  duckstation.json  ppsspp.json  retroarch.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/api/: cloud_api.rs  explorer_api.rs  history_api.rs  mod.rs  packager_api.rs  profile_api.rs  settings_api.rs  sync_api.rs  watcher_api.rs
app/src-tauri/src/core/: cloud.rs  history.rs  mod.rs  packager.rs  profile.rs  settings.rs  sync.rs  watcher.rs
app/src/components/: AppHeader.svelte  CompareVersionDrawer.svelte  EmulatorList.svelte  GameDetailView.svelte  GameList.svelte  HistoryPanel.svelte  MainLayout.svelte  PackagerPanel.svelte  ProfilePreview.svelte  RecentHistory.svelte  Sidebar.svelte  ThemeSelector.svelte  WatcherPanel.svelte
app/src/components/dialogs/: SyncConflictDialog.svelte
app/src/components/emulator/: EmulatorList.svelte  ProfileModal.svelte  ProfilePanel.svelte  ProfilePreview.svelte
app/src/components/game/: CompareVersionDrawer.svelte  GameDetailView.svelte  GameIcon.svelte  GameList.svelte  HistoryPanel.svelte  PackagerPanel.svelte  RecentHistory.svelte  WatcherPanel.svelte
app/src/components/layout/: MainLayout.svelte  Sidebar.svelte  ThemeSelector.svelte
app/src/components/pages/: BackupSettingsPage.svelte  CloudPage.svelte  CloudSettingsPage.svelte  GameDetailPage.svelte  ProfilesSettingsPage.svelte  SettingsPage.svelte  StorageSettingsPage.svelte  ThemeSettingsPage.svelte
app/src/components/settings/: CloudModeTab.svelte
app/src/components/shared/: CloudSettings.svelte  ConfirmDialog.svelte  NotificationLog.svelte  (+2 more)
app/src/lib/: api.ts  emulatorIcons.ts  errorMessages.ts  historyStore.ts  legacy-fallbacks.css  notifications.ts  settingsStore.ts  stores.ts  themeStore.ts  uiTypes.ts  utils.ts
app/src/routes/: +layout.svelte
app/src/styles/: global.css
cloud/server/: .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  RELEASE.md  docker-compose.yml  nginx.conf.example
cloud/server/src/: config.rs  error.rs  lib.rs  main.rs  types.rs  validation.rs
cloud/server/src/auth/: jwt.rs  mod.rs
cloud/server/src/routes/: auth.rs  device.rs  health.rs  mod.rs  save.rs
cloud/server/src/services/: auth.rs  device.rs  mod.rs  save.rs
cloud/server/src/storage/: mod.rs  s3_client.rs
cloud/server/tests/: auth_test.rs  validation_test.rs
cloud/worker/: README.md  package.json  tsconfig.json  wrangler.toml
cloud/worker/src/: auth.ts  jwt.ts  middleware.ts  saveMetadata.ts  security.ts  storage.ts  userStore.ts  utils.ts  validation.ts  worker.ts  workerToken.ts
cloud/worker/tests/: auth.test.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FileListPanel.tsx  FormatSelector.tsx  OutputFolderChooser.tsx  ProgressIndicator.tsx  ToastMessage.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: MainLayout.tsx
frontend/src/utils/: designTokens.ts
(+12 files in other folders)
