[package]
name = "crosssave-cloud"
version = "0.0.1"
description = "Cross-platform cloud sync for emulator save files on Linux and Android."
authors = ["h1dr0n"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crosssave_cloud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", default-features = false, features = ["serde", "macos_fsevent", "crossbeam-channel"] }
async-channel = "2"
thiserror = "1"
tokio = { version = "1", features = ["macros", "sync", "time"] }
tracing = "0.1"
glob = "0.3"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

