[package]
name = "crosssave-selfhost-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"

# S3 Client

# AWS / S3
aws-config = { version = "=1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "=1.17.0"
# Pin transitive dependencies to avoid Rust 1.88 requirement
aws-sdk-sts = "=1.17.0"
aws-sdk-sso = "=1.17.0"
aws-sdk-ssooidc = "=1.17.0"
aws-credential-types = { version = "1.1", features = ["hardcoded-credentials"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
base64ct = "=1.6.0" # Pin to avoid 1.8.0 edition2024 issue
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Environment config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
